--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -14,4 +14,5 @@ tasks:
   install:nix:
     cmds:
       - curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix | sh -s -- install
+      - softwareupdate --install-rosetta --agree-to-license
     desc: "nicer overview of the installation steps, designed to survive macOS upgrades, Flakes enable by default."
